# client

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  test_websocket_storage.rs
examples/: test_auth_window.rs  test_game_id.rs  test_parser.rs  test_parser2.rs  test_safety.rs
shared/: Cargo.toml
src/: hotkey.rs  lib.rs  main.rs
src/auth/: browser_oauth.rs  mod.rs
src/emulators/: auto_detect.rs  citra.rs  dolphin.rs  mod.rs  pcsx2.rs  ppsspp.rs  retroarch.rs  rpcs3.rs  yuzu_ryujinx.rs
src/launchers/: emulationstation.rs  launchbox.rs  mod.rs
src/monitor/: mod.rs  process.rs
src/payment/: limits.rs  mod.rs  stripe.rs  subscription.rs
src/storage/: compression.rs  database.rs  game_cover_fetcher.rs  game_database.rs  gamecube_database.rs  gci_parser.rs  hasher.rs  memory_card_tracker.rs  mod.rs  ps2_memory_card.rs  save_types.rs  settings_manager.rs  watcher.rs
src/sync/: api.rs  auth.rs  conflict_resolution.rs  encryption.rs  event_handler.rs  message_throttler.rs  mod.rs  service.rs  settings_sync.rs  test_websocket.rs  websocket.rs
src/ui/: audio.rs  cloud_auth.rs  conflict_dialog.rs  mod.rs  notifications.rs  settings.rs  tray.rs
tests/: database_tests.rs  event_handler_test.rs  integration_tests.rs  realtime_integration_test.rs  throttler_test.rs
tests/common/: mod.rs
