[package]
name = "retrosave"
version = "0.1.0"
authors = ["Retrosave Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/retrosave/retrosave-client"
homepage = "https://retrosave.cloud"
description = "Automatic save management for retro game emulators"
build = "build.rs"

[dependencies]
# Core dependencies
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }

# Compression
zstd = "0.13"

# Cryptography
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.11", features = ["v4", "serde"] }
aes-gcm = "0.10"
argon2 = { version = "0.5", default-features = false, features = ["std"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Shared crate
retrosave-shared = { path = "../shared" }

# Utilities
once_cell = "1.20"

# UI
egui = "0.29"
eframe = { version = "0.29", features = ["persistence"] }
tray-icon = "0.19"
notify-rust = "4.11"
image = "0.25"
winit = { version = "0.30", features = ["x11"] }

# System monitoring
sysinfo = "0.32"

# XML parsing for launcher configs
quick-xml = "0.37"
notify = "7.0"

# Hotkeys
enigo = "0.2"
global-hotkey = "0.6"

# Audio
rodio = "0.19"

# Networking
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "cookies"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
webbrowser = "1.0"

# Configuration
toml = "0.8"
directories = "5.0"
dotenv = "0.15"
dirs = "5.0"

# Security
# keyring removed - using file-based storage
base64 = "0.21"
rand = "0.8"
gethostname = "0.5"
open = "5.3.2"
url = "2.5.7"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

# Platform-specific
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "handleapi"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21", features = ["xlib"] }
gtk = "0.18"
glib = "0.18"

[lib]
name = "retrosave"
path = "src/lib.rs"

[[bin]]
name = "retrosave"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
